added a new project

--- a/main.mustache
+++ b/main.mustache
@@ -40,6 +40,10 @@
       <td><a href="https://github.com/Bluh7/Login-System-Example"><b>Login system with JWT and MongoDB</b></a></td>
       <td><img alt="Issues" src="https://img.shields.io/github/issues/Bluh7/Login-System-Example?style=flat-square&labelColor=343b41"/></td>
     </tr>
+    <tr>
+      <td><a href="https://github.com/Bluh7/vision-enhancer"><b>Python bot that upscales images resolution with machine learning models</b></a></td>
+      <td><img alt="Issues" src="https://img.shields.io/github/issues/Bluh7/vision-enhancer?style=flat-square&labelColor=343b41"/></td>
+    </tr>
   </tbody>
 </table>
 <p><img src="{{background_image}}" width="600"></p>
