--- a/main.mustache
+++ b/main.mustache
@@ -5,7 +5,7 @@
 <h3>Things I like to code with an awful front-end</h3>
 
 <p>
-  <img src="/svg/chrome.svg" alt="GoogleChrome">
+  <img src="/svg/docker.svg" alt="Docker">
   <img src="/svg/python.svg" alt="Python">
   <img src="/svg/expressjs.svg" alt="ExpressJS">
   <img src="/svg/javascript.svg" alt="Javascript">
