--- a/main.mustache
+++ b/main.mustache
@@ -19,6 +19,13 @@
   <img src="/svg/prisma.svg" alt="Prisma">
   <img src="/svg/postgre.svg" alt="PostgreSQL">
 </p>
+
+<h3>Currently learning</h3>
+
+<p>
+  <img src="/svg/spring.svg" alt="Spring">
+</p>
+
 <h3>Some of my projects</h3>
 <table>
   <thead align="center">
