--- a/main.mustache
+++ b/main.mustache
@@ -54,7 +54,7 @@
   </tbody>
 </table>
 <p><img src="{{background_image}}" width="600"></p>
-<p>This photo was taken by <b>{{background_author}}</b> at <b>{{background_date}}</b>.</p>
+<p>Photo was taken by <b>{{background_author}}</b> on <b>{{background_date}}</b>.</p>
 <p>For now the current weather is <b>{{city_temperature}}°C, <i>{{city_weather}}</i></b></br>Today, the sun will start to shine at <b>{{sun_rise}}</b> and give moon some space at <b>{{sun_set}}</b>.</p>
 <h3>Where you can find me</h3>
 <p><a href="https://github.com/Bluh7" target="_blank"><img alt="Github" src="/svg/github.svg"/></a> <a href="https://discord.com/users/757738778633961592" target="_blank"><img src="https://dcbadge.vercel.app/api/shield/757738778633961592" alt="Discord"></a></p>
